# DreamServer

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  LAN_CLUSTER_GUIDE.md  README.md  install.ps1
.claude/commands/: tdd.md
.github/prompts/: issue-to-pr.md  nightly-code-review.md  nightly-docs-update.md
.github/scripts/: anthropic_helper.py  apply-docstrings.py  apply-type-hints.py  generate-docstrings.py  generate-type-hints.py
.github/test-events/: issue-opened.json  pr-opened.json  release-created.json
.github/workflows/: ai-issue-triage.yml  autonomous-code-scanner.yml  claude-review.yml  dashboard.yml  issue-to-pr.yml  lint-powershell.yml  nightly-code-review.yml  nightly-docs-update.yml  release-notes.yml  secret-scan.yml  test-linux.yml  validate-compose.yml  validate-env.yml
dream-server/: .env.example  .env.schema.json  .gitignore  CHANGELOG.md  FAQ.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.amd.yml  docker-compose.arc.yml  docker-compose.base.yml  docker-compose.cluster-amd.yml  docker-compose.cluster.yml  docker-compose.cpu.yml  docker-compose.intel.yml  docker-compose.multigpu-amd.yml  docker-compose.multigpu-nvidia.yml  docker-compose.multigpu.yml  docker-compose.nvidia.yml  docker-compose.tier0.yml  dream-backup.sh  dream-cli  dream-preflight.sh  dream-restore.sh  dream-update.sh  get-dream-server.sh  install-core.sh  manifest.json  test-install.sh
dream-server/extensions/services/dashboard-api/crates/dashboard-api/: Cargo.toml
dream-server/extensions/services/dashboard-api/crates/dashboard-api/src/: config.rs  gpu.rs  helpers.rs  lib.rs  main.rs  middleware.rs  state.rs
dream-server/extensions/services/dashboard-api/crates/dashboard-api/src/routes/: agents.rs  extensions.rs  gpu.rs  health.rs  mod.rs  preflight.rs  services.rs  settings.rs  setup.rs
dream-server/extensions/services/dashboard-api/crates/dashboard-api/tests/: api_integration.rs
dream-server/extensions/services/dashboard-api/crates/dream-common/: Cargo.toml
dream-server/extensions/services/dashboard-api/crates/dream-common/src/: error.rs  lib.rs  manifest.rs  models.rs
dream-server/extensions/services/dashboard-api/crates/dream-scripts/: Cargo.toml
dream-server/extensions/services/dashboard-api/crates/dream-scripts/src/: assign_gpus.rs  healthcheck.rs  lib.rs  main.rs  validate_models.rs
dream-server/extensions/services/dashboard-api/crates/dream-scripts/tests/: audit_extensions_test.rs  validate_sim_summary_test.rs
resources/: README.md
(+443 files in other folders)
