[package]
name = "dashboard-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dashboard-api"
path = "src/main.rs"

[lib]
name = "dashboard_api"
path = "src/lib.rs"

[dependencies]
dream-common = { path = "../dream-common" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
base64 = "0.22"
shellexpand = "3"
dirs = "6"
hostname = "0.4"
futures = "0.3"
http = "1"
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
wiremock = "0.6"
