[package]
name = "dream-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }
